--- a/src/app/features/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/features/dashboard-admin/dashboard-admin.component.html
@@ -1,4 +1,4 @@
-<div class="mainpage w-screen h-screen p-4 flex bg-[#F7F7F7]">
+<div class="mainpage w-screen h-screen flex bg-[#F7F7F7]">
 
     <div class="mainpage-container w-full h-full flex">
 
@@ -10,7 +10,7 @@
                 <div class="topsidebar w-full h-20">
 
                 </div>
-                <div class="h-full w-full p-8 px-20">
+                <div class="h-full w-full px-20 overflow-auto">
                     <router-outlet></router-outlet>
                 </div>
         </main>
