working on the delete and update button

--- a/src/app/features/survey-edition/components/table/table.component.html
+++ b/src/app/features/survey-edition/components/table/table.component.html
@@ -76,7 +76,7 @@
 
         <tr>
             <td></td>
-            <td><input [(ngModel)]="answerObject.text" (keydown.enter)="onEnter('answer')" type="text"></td>
+            <td><input [(ngModel)]="Answer.text" (keydown.enter)="onEnter('answer')" class="border" placeholder="Answer ..." type="text"></td>
             <td></td>
         </tr>
     </tbody>
