created all the front for the partiicpation

--- a/src/app/features/participate/Components/progress-button/progress-button.component.html
+++ b/src/app/features/participate/Components/progress-button/progress-button.component.html
@@ -1,3 +1,3 @@
-<button class="" (click)="notifyParen()">
+<button *ngIf="showButton" class="bg-green-500 p-3 rounded-lg text-white" (click)="notifyParen()">
     {{type}}
 </button>
