--- a/src/app/features/participate/Components/progress-color-bar/progress-color-bar.component.html
+++ b/src/app/features/participate/Components/progress-color-bar/progress-color-bar.component.html
@@ -1,3 +1,2 @@
-<div class="w-full h-3 bg-green-500">
-
+<div class="bar relative w-full h-2 before:bg-green-500" [style.--before-width]="width">
 </div>
