--- a/src/app/features/participate/Components/question-holder/answer-item/answer-item.component.html
+++ b/src/app/features/participate/Components/question-holder/answer-item/answer-item.component.html
@@ -1,4 +1,5 @@
-<div class="p-2 h-fit border flex gap-4 cursor-pointer">
-    <input type="radio" name="" id="">
+<div (click)="OnEmit()" [ngClass]="isActive ? 'border-green-400' : ''" class="p-2 h-fit border flex gap-4 cursor-pointer">
+    <input type="radio" [ngClass]="{'text-green-500':isActive}" [checked]="isActive" name="" id="">
     <p>{{answer.text}}</p>
+    {{answer.id}}
 </div>
