--- a/src/app/features/participate/Components/question-holder/question-holder.component.html
+++ b/src/app/features/participate/Components/question-holder/question-holder.component.html
@@ -1,10 +1,16 @@
 <div class="w-[45rem] relative h-fit border-b-2 flex flex-col gap-10 py-20 px-1">
-    <h1 class="text-wrap w-full text-2xl">{{QuestionIndex + 1}}. {{Question?.text}}</h1>
+    <h1 class="text-wrap w-full text-2xl">{{QuestionIndex + 1}}. {{Question?.text}} --- {{Question?.id}}</h1>
     <div class="w-full flex flex-col gap-2">
-        @for (answer of Question?.answerList; track $index) {
-            <app-answer-item  [answer]="answer"></app-answer-item>
-            <app-answer-item  [answer]="answer"></app-answer-item>
-        }
+            @for (answer of Question?.answerList; track answer.id) {
+                <app-answer-item 
+                [isActive]="answer.id === isActiveAnswer || isActiveAnswers.includes(answer.id)" 
+                (emitToParen)="clickedOnAnswer($event)"  
+                [answer]="answer"></app-answer-item>
+            }
     </div>
-    <app-progress-button (parentNotification)="getTheResponseFromButton()" class="absolute bottom-[-3rem] right-4" [type]="'Next'"></app-progress-button>
+    <app-progress-button 
+    [showButton]="this.buttonActive"
+    (parentNotification)="getTheResponseFromButton()" 
+    class="absolute bottom-[-4rem] right-4" 
+    [type]="'Next'"></app-progress-button>
 </div>
