--- a/src/app/features/participate/Components/subject-progress/subject-progress-item/subject-progress-item.component.html
+++ b/src/app/features/participate/Components/subject-progress/subject-progress-item/subject-progress-item.component.html
@@ -1,4 +1,8 @@
-<div class="flex items-center gap-3 text-lg">
-    <span class="shadow-xl text-center rounded-full w-10 p-2">{{index}}</span>
-    <p>{{subSubject.title}}</p>
+<div class="flex items-center gap-3 font-medium">
+    <span class="shadow-xl text-center rounded-full w-10 p-2" *ngIf="!done">{{index}}</span>
+
+    <span class="shadow-xl text-center rounded-full w-10 p-2 bg-green-400 text-white" *ngIf="done">
+	&#10003;
+    </span>
+    <p [ngClass]="{'text-green-500' : done}">{{subSubject.title}}</p>
 </div>
