--- a/src/app/shared/menu-component/menu-component.component.html
+++ b/src/app/shared/menu-component/menu-component.component.html
@@ -1,5 +1,5 @@
-<button (click)="onClick($event)" [ngClass]="survey ? 'text-white' : 'text-black'" class="menubutton flex items-center justify-center right-0 rounded-3xl h-10 w-10">
-    <ng-icon name="ionFootsteps"></ng-icon>
+<button (click)="onClick($event)" class="text-[#1429B7] menubutton flex items-center justify-center right-0 rounded-3xl h-10 w-10">
+    Edit
 </button>
 
 <div *ngIf="isMenuOpen"  class="menu absolute z-50 w-32 rounded-lg p-2 right-[10%] bg-white text-black h-fit flex flex-col">
