--- a/src/app/features/participate/Pages/home-page/Components/result-page/result-container/result-container.component.html
+++ b/src/app/features/participate/Pages/home-page/Components/result-page/result-container/result-container.component.html
@@ -1,10 +1,11 @@
-@for (subject of Subjects; track $index) {
-    <div class="flex flex-col gap-7">
-        <app-sub-suject-holder [Sub]="subject"></app-sub-suject-holder>
-
-        @for (Sub of subject.subSubjects; track $index) {
-            <app-sub-suject-holder [Sub]="Sub"></app-sub-suject-holder>
-        }
-    </div>
-
-}
+<div class="w-full h-full">
+    @for (subject of Subjects; track $index) {
+        <div class="flex flex-col gap-7">
+            <app-sub-suject-holder [id]="subject.title" [Sub]="subject"></app-sub-suject-holder>
+    
+            @for (Sub of subject.subSubjects; track $index) {
+                <app-sub-suject-holder [id]="Sub.title" [Sub]="Sub"></app-sub-suject-holder>
+            }
+        </div>
+    }
+</div>
