--- a/src/app/features/participate/Pages/home-page/Components/result-page/subject-holder/subject-holder.component.html
+++ b/src/app/features/participate/Pages/home-page/Components/result-page/subject-holder/subject-holder.component.html
@@ -1,12 +1,15 @@
-<ul class="w-full h-full p-10 border-l">
+<ul class="w-full h-full border-l fixed overflow-auto font-medium py-9 z-0">
     @for (subject of Subjects; track $index) {
-        <li>{{subject.title}}
-
-            <ul class="ms-5">
+        <li class="text">
+            <p class="p-1 px-2" [ngClass]="{'active':subject.title == this.visible}">{{subject.title}}</p>
+            <ul class="">
                 @for (subSubject of subject.subSubjects; track $index) {
-                    <li>{{subSubject.title}}</li>
+                    <li [ngClass]="{'active':subSubject.title == this.visible}" class="text-sm">
+                        <p class="p-1 px-5">{{subSubject.title}}</p>
+                    </li>
                 }
             </ul>
         </li>
+
     }
 </ul>
